--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <h1 class="title">IP Address Tracker</h1>
           <div class="inputbox">
-            <input type="text" id="ipTxt" name="fname">
+            <input type="text"placeholder="Input IP Address here" id="ipTxt" name="fname">
             <button name = "getButton" id = "getBtn" onclick="generateIpDetails()">></button>
           </div>
          
